@@ -7,7 +7,7 @@ require_once JPATH_BASE . '/libraries/joomla/installer/installer.php';
  * Test class for JInstaller.
  * Generated by PHPUnit on 2009-10-27 at 15:20:37.
  */
-class JInstallerTest extends PHPUnit_Framework_TestCase
+class JInstallerTest extends JoomlaTestCase
 {
 	/**
 	 * @var JInstaller
@@ -29,6 +29,7 @@ class JInstallerTest extends PHPUnit_Framework_TestCase
 	 */
 	protected function tearDown()
 	{
+		parent::tearDown();
 	}
 
 	/**
@@ -41,6 +42,14 @@ class JInstallerTest extends PHPUnit_Framework_TestCase
 			$this->isInstanceOf('JInstaller'),
 			'JInstaller::getInstance failed'
 		);
+	}
+
+	public function testMyOnlyTest()
+	{
+		$this->setExpectedError(array('level' => E_ERROR, 'code' => 500, 'message' => 'test'));
+		//$this->setExpectedError();
+		JError::raiseError(500, 'test');
+
 	}
 
 	/**
@@ -131,20 +140,20 @@ class JInstallerTest extends PHPUnit_Framework_TestCase
 	 */
 	public function testGetPath()
 	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete(
-		'This test has not been implemented yet.'
-		);
-	}
+		$this->object = JInstaller::getInstance();
 
-	/**
-	 * @todo Implement testSetPath().
-	 */
-	public function testSetPath()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete(
-		'This test has not been implemented yet.'
+		$this->assertThat(
+			$this->object->getPath('path1_getpath', 'default_value'),
+			$this->equalTo('default_value'),
+			'getPath did not return the default value for an undefined path'
+		);
+
+		$this->object->setPath('path2_getpath', JPATH_BASE.'/required_path');
+
+		$this->assertThat(
+			$this->object->getPath('path2_getpath', 'default_value'),
+			$this->equalTo(JPATH_BASE.'/required_path'),
+			'getPath did not return the previously set value for the path'
 		);
 	}
 
@@ -153,9 +162,12 @@ class JInstallerTest extends PHPUnit_Framework_TestCase
 	 */
 	public function testPushStep()
 	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete(
-		'This test has not been implemented yet.'
+		$this->object = JInstaller::getInstance();
+		$this->object->pushStep(array('type' => 'extension', 'id' => 5));
+
+		$this->assertThat(
+			$this->readAttribute($this->object, '_stepStack'),
+			$this->equalTo(array(array('type' => 'extension', 'id' => 5)))
 		);
 	}
 
